--- a/veewee/definitions/vincent-box.jessie/preseed.cfg
+++ b/veewee/definitions/vincent-box.jessie/preseed.cfg
@@ -1,10 +1,9 @@
-#### Contents of the preconfiguration file (for wheezy)
+#### Contents of the preconfiguration file (for jessie)
 ### Localization
 # Locale sets language and country.
 d-i debian-installer/locale string en_US.UTF-8
 
 # Keyboard selection.
-#d-i keymap select us
 d-i keyboard-configuration/xkb-keymap select us
 
 ### Network configuration
